--- a/index.html
+++ b/index.html
@@ -3,224 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Infographic Collection</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    
+    <title>Thư Viện Tri thức Cổ Điển</title>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500;700&family=Merriweather:ital,wght@0,300;0,400;1,300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
     <style>
-        /* 1. CẤU HÌNH CƠ BẢN */
+        /* --- CẤU HÌNH MÀU SẮC & CHUNG --- */
         :root {
-            --primary: #f6851b; /* Màu cam MetaMask */
-            --bg-color: #121212;
-            --card-bg: rgba(255, 255, 255, 0.05);
-            --text-color: #ffffff;
+            --bg-paper: #FDFBF7; /* Màu nền kem giấy cũ */
+            --text-brown: #5D4037; /* Màu chữ nâu trầm */
+            --accent-gold: #C0A062; /* Màu vàng đồng điểm nhấn */
+            --card-bg: #FAF8EF; /* Nền thẻ sáng hơn nền chính 1 chút */
+            --border-sepia: #D7CCC8; /* Viền màu sepia nhạt */
         }
 
         body {
             margin: 0;
             padding: 0;
-            font-family: 'Inter', sans-serif;
-            background-color: var(--bg-color);
-            color: var(--text-color);
-            overflow-x: hidden;
-        }
-
-        /* 2. HIỆU ỨNG NỀN PARTICLES */
-        #particles-js {
-            position: fixed;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-            z-index: -1; /* Nằm dưới cùng */
-            background-image: radial-gradient(circle at 50% 50%, #1a1a2e 0%, #000000 100%);
-        }
-
-        /* 3. LAYOUT CHÍNH */
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 40px 20px;
-            position: relative;
-            z-index: 1;
-        }
-
-        header {
-            text-align: center;
-            margin-bottom: 60px;
-            padding-top: 40px;
-        }
-
-        .logo-area {
-            font-size: 3rem;
-            font-weight: 800;
-            background: linear-gradient(90deg, #f6851b, #e2761b, #cd6116);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            margin-bottom: 10px;
-            letter-spacing: -1px;
-        }
-
-        .subtitle {
-            font-size: 1.1rem;
-            color: #aaa;
-            max-width: 600px;
-            margin: 0 auto;
-            line-height: 1.6;
-        }
-
-        /* 4. GRID DANH SÁCH INFOGRAPHIC */
-        .grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 30px;
-        }
-
-        /* 5. THIẾT KẾ CARD (GLASSMORPHISM) */
-        .card {
-            background: var(--card-bg);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            border-radius: 20px;
-            padding: 30px;
-            backdrop-filter: blur(10px);
-            transition: all 0.3s ease;
-            cursor: pointer;
-            text-decoration: none;
-            color: white;
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            position: relative;
-            overflow: hidden;
-            box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-        }
-
-        /* Hiệu ứng Tilt 3D sẽ được JS xử lý, đây là fallback */
-        .card:hover {
-            transform: translateY(-5px);
-            border-color: var(--primary);
-            box-shadow: 0 0 20px rgba(246, 133, 27, 0.2);
-        }
-
-        .card-icon {
-            font-size: 2.5rem;
-            color: var(--primary);
-            margin-bottom: 20px;
-        }
-
-        .card h2 {
-            margin: 0 0 10px 0;
-            font-size: 1.5rem;
-            font-weight: 600;
-        }
-
-        .card p {
-            font-size: 0.95rem;
-            color: #ccc;
-            margin: 0 0 25px 0;
-            line-height: 1.5;
-        }
-
-        .btn-arrow {
-            margin-top: auto; /* Đẩy nút xuống đáy */
-            display: inline-flex;
-            align-items: center;
-            font-weight: 600;
-            color: var(--primary);
-            transition: transform 0.3s;
-        }
-
-        .card:hover .btn-arrow {
-            transform: translateX(5px);
-        }
-
-        /* Footer */
-        footer {
-            text-align: center;
-            margin-top: 80px;
-            color: #555;
-            font-size: 0.9rem;
-            padding-bottom: 20px;
-        }
-
-    </style>
-</head>
-<body>
-
-    <div id="particles-js"></div>
-
-    <div class="container">
-        <header>
-            <div class="logo-area">MY COLLECTION</div>
-            <p class="subtitle">Kho lưu trữ các kiến thức trực quan, infographic và sơ đồ tư duy được tổng hợp bởi Gemini & Tôi.</p>
-        </header>
-
-        <div class="grid">
-
-            <a href="stoicism.html" class="card" data-tilt data-tilt-glare data-tilt-max-glare="0.3">
-                <div class="card-icon"><i class="fa-solid fa-landmark"></i></div>
-                <h2>Chủ Nghĩa Khắc Kỷ</h2>
-                <p>Khám phá tư duy khắc kỷ, cách rèn luyện tinh thần thép và tìm kiếm sự bình yên nội tại.</p>
-                <span class="btn-arrow">Xem ngay <i class="fa-solid fa-arrow-right" style="margin-left: 8px;"></i></span>
-            </a>
-
-            <a href="#" class="card" data-tilt>
-                <div class="card-icon"><i class="fa-solid fa-chart-line"></i></div>
-                <h2>Biểu Đồ Doanh Số</h2>
-                <p>Tổng hợp số liệu kinh doanh quý 1, phân tích xu hướng và dự báo tăng trưởng.</p>
-                <span class="btn-arrow">Xem ngay <i class="fa-solid fa-arrow-right" style="margin-left: 8px;"></i></span>
-            </a>
-
-             <a href="#" class="card" data-tilt>
-                <div class="card-icon"><i class="fa-solid fa-brain"></i></div>
-                <h2>Sơ Đồ Tư Duy</h2>
-                <p>Cách não bộ xử lý thông tin và phương pháp ghi nhớ siêu tốc.</p>
-                <span class="btn-arrow">Xem ngay <i class="fa-solid fa-arrow-right" style="margin-left: 8px;"></i></span>
-            </a>
-
-        </div>
-
-        <footer>
-            © 2024 Infographic Collection. Hosted on GitHub Pages.
-        </footer>
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.0/vanilla-tilt.min.js"></script>
-
-    <script>
-        /* Cấu hình hiệu ứng hạt (Particles) giống blockchain */
-        particlesJS("particles-js", {
-            "particles": {
-                "number": { "value": 80, "density": { "enable": true, "value_area": 800 } },
-                "color": { "value": "#ffffff" },
-                "shape": { "type": "circle" },
-                "opacity": { "value": 0.5, "random": false },
-                "size": { "value": 3, "random": true },
-                "line_linked": { "enable": true, "distance": 150, "color": "#ffffff", "opacity": 0.2, "width": 1 },
-                "move": { "enable": true, "speed": 2, "direction": "none", "random": false, "straight": false, "out_mode": "out", "bounce": false }
-            },
-            "interactivity": {
-                "detect_on": "canvas",
-                "events": {
-                    "onhover": { "enable": true, "mode": "grab" }, /* Hiệu ứng khi di chuột nối dây */
-                    "onclick": { "enable": true, "mode": "push" },
-                    "resize": true
-                },
-                "modes": {
-                    "grab": { "distance": 140, "line_linked": { "opacity": 1 } }
-                }
-            },
-            "retina_detect": true
-        });
-
-        /* Kích hoạt hiệu ứng nghiêng 3D cho các thẻ */
-        VanillaTilt.init(document.querySelectorAll(".card"), {
-            max: 15, // Độ nghiêng tối đa
-            speed: 400, // Tốc độ
-            glare: true, // Hiệu ứng bóng lóa
-            "max-glare": 0.2,
-        });
-    </script>
-</body>
-</html>
+            font-family: 'Merri
