--- a/index.html
+++ b/index.html
@@ -100,14 +100,14 @@
             
             <div class="flex flex-col sm:flex-row gap-4 justify-center items-center">
                 <!-- CTA 1 -->
-                <a href="stoic.html" class="group relative px-8 py-3 border border-white/20 hover:border-gold transition-all duration-300 min-w-[200px]">
+                <a href="stoicism.html" class="group relative px-8 py-3 border border-white/20 hover:border-gold transition-all duration-300 min-w-[200px]">
                     <div class="absolute inset-0 bg-gold/5 w-0 group-hover:w-full transition-all duration-300"></div>
                     <span class="relative flex items-center justify-center gap-2 text-white font-bold uppercase tracking-widest text-xs">
                         <i class="fas fa-stone mr-1"></i> Khắc Kỷ
                     </span>
                 </a>
                 <!-- CTA 2 -->
-                <a href="east-west.html" class="group relative px-8 py-3 bg-white text-black hover:bg-gray-200 transition-all duration-300 min-w-[200px]">
+                <a href="philosophy_west_east.html" class="group relative px-8 py-3 bg-white text-black hover:bg-gray-200 transition-all duration-300 min-w-[200px]">
                     <span class="relative flex items-center justify-center gap-2 font-bold uppercase tracking-widest text-xs">
                         Đông Tây <i class="fas fa-arrow-right ml-1"></i>
                     </span>
